2008-09-06  Martin Nordholts  <martinn@svn.gnome.org>

	* plug-ins/file-psd/psd-load.c (add_layers): Also consider unknown
	compression methods unsupported. This gives an error message
	instead of a crash for PSD file attached to bug #544939. The PSD
	loader still fails to read the correct compression method however.

2008-09-06  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpoperationhuesaturation.c
	(gimp_operation_hue_saturation_process): don't use // for comments.

2008-09-06  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationhuesaturation.c
	(gimp_operation_hue_saturation_process): mapped_* -> mapped_*_hue.

2008-09-06  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 527085 – Hue/Saturation (working improperly)

	* app/gegl/gimpoperationhuesaturation.c
	(gimp_operation_hue_saturation_process): Properly map the
	secondary hue. Based on patch by Michael Deal.

2008-09-05  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpgegltool.c: blacklist "color-convert" and all GIMP
	operations.

2008-09-05  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpgegltool.c: added a blacklist of operations that
	should not be shown. We may want to add more operations here.

2008-09-05  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugindebug.[ch] (gimp_plug_in_debug_argv): made
	the "args" parameter const.

	* app/plug-in/gimpplugin.c (gimp_plug_in_open): made some strings
	const.

2008-09-05  Michael Natterer  <mitch@gimp.org>

	* plug-ins/file-fits/fits-io.[ch]: add some const.

2008-09-05  Michael Natterer  <mitch@gimp.org>

	Bug 545325 – Scrollbars do not disappear automatically

	* app/widgets/gimpcontainertreeview.c: autosize the columns after
	each operation that can reduce the treeview's width.

2008-09-05  Michael Natterer  <mitch@gimp.org>

	Bug 550983 – The size displayed in the status bar isn't correct

	* app/tools/gimprectangletool.c: use the right precision when
	pushing the rectangle's size as coordinates to the statusbar.
